Add option to pass in resources for lookup

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
 
 [testenv]
 commands =
-         py.test --cov helium_commander --cov-report term  []
+         py.test --cov helium_commander --cov-report term  {posargs:tests}
 passenv =
         HELIUM_API_KEY
         HELIUM_API_URL
