--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,7 @@
 [bdist_wheel]
 universal=1
+
+[flake8]
+min-version=2.7
+ignore=FI10,FI11,FI12,FI13,FI15,FI5
+exclude=_version.py, tests, .tox, env, setup.py
