--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ passenv =
         HELIUM_API_URL
         HELIUM_RECORD_MODE
         HELIUM_RECORD_FOLDER
+        COLUMNS
         TRAVIS
 deps = {[base]deps}
 
