Add support for configurations

--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,7 @@ skip_missing_interpreters = True
 
 [base]
 deps =
-    pytest
-    pytest-cov
-    betamax
-    betamax_serializers
-    betamax_matchers
-    flake8
-    flake8_docstrings
+     -r{toxinidir}/requirements-dev.txt
 
 [testenv]
 commands =
